# hafnia

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pypi-private.cfg  .trivyignore  CLAUDE.md  CONTRIBUTING.md  README.md  example_run.py  pyproject.toml  state.json
.devcontainer/: devcontainer.json
.github/workflows/: Dockerfile  build.yaml  check_release.yaml  ci_cd.yaml  docker-push.yml  lint-python.yml  lint.yaml  lint.yml  pre-commit.yml  publish_docker.yaml  publish_pypi.yaml  publish_release.yaml  tests.yaml  workflow.yaml
docs/: benchmark.md  cli.md  custom_dataset.md  dataset.md  dataset_recipe.md  s2m.md
examples/: dataset_builder.py  demo_hugging_face_dataset.py  example_benchmark.py  example_byod.py  example_custom_dataset.py  example_dataset_builder.py  example_dataset_recipe.py  example_hafnia_dataset.py  example_load_dataset.py  example_sprint_6.py  example_torchvision_dataloader.py  example_vlm_aas.py  logger_speed.py  model_interface.py  playground.py
examples/core/: dataloader_example.py  dataset_builder.py  example_run.ipynb  example_run.py
mdi/: __main__.py  config.py  data.py
mdi/cli/: __convert__.py  __runc__.py
mdi/core/: __init__.py
mdi/datasets/: factory.py
notebooks/: hafnia_dataset_demo.ipynb  hafnia_demo.ipynb  sample.json
src/: __init__.py  __main__.py
src/cli/: __main__.py  config.py  consts.py  convert.py  data.py  data_cmds.py  dataset_cmds.py  dataset_recipe_cmds.py  experiment.py  experiment_cmds.py  mdi_sys.py  profile_cmds.py  recipe_cmds.py  runc.py  runc_cmds.py  train_recipe_cmds.py
src/hafnia/: __init__.py  helper_testing.py  http.py  log.py  torch_helpers.py  utils.py
src/hafnia_cli/: __main__.py  config.py  consts.py  dataset_cmds.py  dataset_recipe_cmds.py  experiment_cmds.py  keychain.py  profile_cmds.py  runc_cmds.py  trainer_package_cmds.py
src/mdi_python_tools/: __init__.py  config.py  http.py  log.py  torch_helpers.py  utils.py
tests/: _load_dataset.py  _mdi.py  conftest.py  helper_testing.py  helper_testing_benchmark.py  helper_testing_datasets.py  resources.py  test_builder.py  test_check_example_scripts.py  test_cli.py  test_executor.py  test_hafnia_logger.py  test_load_dataset.py  test_mdi.py  test_mdi_logger.py  test_samples.py  test_utils.py
tests/data/: dataset_image_metadata_schema.yaml
tests/dataset/: test_colors.py  test_dataset_helpers.py  test_hafnia_dataset.py  test_image_operations.py  test_shape_primitives.py  test_table_transformations.py
tests/integration/: test_bring_your_own_data.py  test_check_example_scripts.py  test_cli_integration.py  test_dataset_recipes_with_platform.py  test_dataset_versioning.py  test_samples.py  (+1 more)
(+149 files in other folders)
