[project]
name = "mdi-python-tools"
version = "0.2.0"
description = "Python tools for communication with MDI platform."
readme = "README.md"
authors = [
    { name = "Ivan Sahumbaiev", email = "ivsa@milestone.dk" }
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.91",
    "click>=8.1.8",
    "datasets>=3.2.0",
    "pillow>=11.1.0",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.4",
    "rich>=13.9.4",
    "ruff>=0.8.5",
    "tqdm>=4.67.1",
]

[project.scripts]
mdi = 'cli.__main__:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["I", "E", "F"]   
ignore = ["E501"]        
line-length = 100

[tool.ruff.isort]
relative-imports-order = "closest-to-furthest"